Bug 27773: Hide unique holidays and exceptions which have passed
This patch modifies the display of unique holidays and holiday
exceptions so that dates in the past are hidden by default. A
corresponding "Show past entries" checkbox can be checked to show the
hidden entries.

To test you should have some unique holidays and holiday exceptions in
your system from the past and in the future.

 - Apply the patch and go to Tools -> Calendar
 - In the tables of existing holidays, check that no dates in the past
   appear in the "Exceptions" or "Unique holidays" tables.
 - Checking the checkbox at the top of each of these tables should
   trigger the display of the hidden rows.

--- a/koha-tmpl/intranet-tmpl/prog/css/calendar.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/calendar.css
@@ -1,3 +1,8 @@
+.controls {
+    display: block;
+    padding: 3px 0;
+}
+
 .key {
     padding: 3px;
     white-space: nowrap;
